# api_auto

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
allure-results/: 01123671-c6ad-4c2b-91b6-e493e39d533e-result.json  0d7fd2c2-11ef-437f-9958-2346d68dc1bb-container.json  18fab200-74bd-4753-bcce-bacf876c22fe-attachment.txt  1ae8a373-574f-463b-8de4-f63affef6bcc-result.json  2736a06d-000a-4636-aaab-985f5d64061b-container.json  2deba811-e802-425d-a75e-06b270ab3e2f-attachment.txt  390cd0fa-0cf4-4d21-bbcc-46202bc000e6-result.json  400b1fd4-75e7-4c7a-a911-a139b44ab487-container.json  4376894b-9d2f-4fba-bdf4-770029a77038-attachment.txt  4a60ad41-b158-4aa9-9161-1be71611987d-container.json  4cb2cc1b-0424-4e2f-94b8-4f826f84b6ac-attachment.txt  4e0b65b0-cc6d-445f-a3ed-305d7043eea1-attachment.txt  521af454-dc1f-4d86-834a-f923184d1c4b-attachment.txt  55b11f6c-4221-46bf-a84c-24e462d2a765-attachment.txt  58d2d9d0-b8ea-432c-8731-2d365843728a-attachment.txt  599f761c-f1bf-4269-b958-810bdc4572bb-result.json  5eaec882-95be-49bf-b50f-6b6c2c3f0f83-container.json  652bdebe-0a64-4986-8b8d-42cee27b7b47-container.json  6e40835c-2f2e-49ba-9acf-5f3bc1b2d119-attachment.txt  6f381014-f857-46d5-b0f7-d614a597371d-attachment.txt  8d9da46f-3ac6-4aac-8a11-44847038fc6c-attachment.txt  8dd4b355-1abf-4a71-8316-974034d7a556-attachment.txt  8ef565c0-1351-4849-a5e6-26dbc23f0c89-attachment.txt  93e018da-6298-481f-b261-5344b36defe8-container.json  9ac3051e-c341-4167-acaf-c79d4121a397-attachment.txt  9fce2932-5999-4df2-b7ff-f1296b69bf1c-attachment.txt  a0e91c70-252e-4f9d-916d-36a65d129ce7-container.json  (+22 more)
(+43 files in other folders)
